# AllegroExamples

./: CMakeLists.txt  simple_bitmap.c  simple_display.c  simple_event.c  simple_font.c  simple_image.c  simple_keyboard.c  simple_mouse.c  simple_timer.c  tileset_display.c
sprite_engine/: assets.h  simple_sprite.c  sprite.h  tile_map.h
